--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- css indra -->
   <link rel="stylesheet" href="./home-page/home-page.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <title>Home Page</title>
 </head>
